--- a/templates/menu/menu.html
+++ b/templates/menu/menu.html
@@ -1,9 +1,14 @@
 <div class="menu">
   <h2>Меню</h2>
-  <button id="btn-create-contact">Создать контакт</button>
-  <button id="btn-create-db">Создать шаблон базы</button>
-  <button id="btn-init" style="display:none">Инициализировать таблицы</button>
-  <button id="btn-fill">Создать случайные контакты</button>
-  <button id="btn-clear">Удалить все контакты</button>
-  <button id="btn-drop-db" style="background:#fee2e2;color:#991b1b;">Удалить базу</button>
+  <button id="btn-create-contact">Створити контакт</button>
+
+  <div style="flex:1"></div>
+
+  <button id="btn-fill">Створити випадкові контакти</button>
+  <button id="btn-clear">Видалити всі контакти</button>
+
+  <div style="height: 32px;"></div>
+
+  <button id="btn-create-db">Створити шаблон бази</button>
+  <button id="btn-drop-db" style="background:#fee2e2;color:#991b1b;">Видалити базу</button>
 </div>
