--- a/static/footer/footer.css
+++ b/static/footer/footer.css
@@ -1,13 +1,13 @@
 /* Стили для футера */
 footer.footer {
-  grid-row: 4 / 4;
+  grid-row: 3 / 3;
   grid-column: 2 / 5;
   width: 100%;
   background: rgba(38, 44, 52, 0.93);
   border-top: 1px solid rgba(255,255,255,0.07);
   box-shadow: 0 -1px 12px #0005;
   padding: 0;
-  margin: 0;
+  margin: 10px 0px;
   position: relative;
   z-index: 10;
   min-height: 44px;
