--- a/templates/filter/filter.html
+++ b/templates/filter/filter.html
@@ -1,10 +1,10 @@
-<!-- Фильтр/сортировка контактов (будет подключаться через include) -->
+<!-- Фільтр/сортування контактів (буде підключатись через include) -->
 <div class="sort">
-  <b>Сортировка:</b>&nbsp;
+  <b>Сортування:</b>&nbsp;
   <select>
-    <option>По имени</option>
-    <option>По фамилии</option>
-    <option>По email</option>
-    <option>По дню рождения</option>
+    <option>За ім'ям</option>
+    <option>За прізвищем</option>
+    <option>За email</option>
+    <option>За днем народження</option>
   </select>
 </div>
