--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Контакты | FastAPI</title>
+  <title>Контакти | FastAPI</title>
   <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet" href="/static/menu/menu.css">
   <link rel="stylesheet" href="/static/contacts/contacts.css">
@@ -19,7 +19,7 @@
         <input type="text" id="contact-search" class="contact-search" placeholder="Пошук..." autocomplete="off" style="margin-right:1em;max-width:180px;">
         <b>Сортування:</b>
         <div class="sort-filters">
-          <button class="sort-btn" id="sort-alpha" data-sort="alpha" data-dir="asc">Алфавітний порядок ↑</button>
+          <button class="sort-btn" id="sort-alpha" data-sort="alpha" data-dir="asc">Абетка ↑</button>
           <button class="sort-btn" id="sort-birthday" data-sort="birthday">Найближчі Дні Народження</button>
         </div>
       </div>
