--- a/templates/popups/contact_form.html
+++ b/templates/popups/contact_form.html
@@ -49,8 +49,8 @@
         </div>
       </label>
       <div class="popup-album-labels">
-        <span class="album-label">фотоальбом (будет позже)</span>
-        <span class="avatar-label">аватарки (будет позже)</span>
+        <span class="album-label">фотоальбом (буде пізніше)</span>
+        <span class="avatar-label">аватарки (буде пізніше)</span>
       </div>
       <div class="popup-actions">
         <button type="submit">Зберегти</button>
