refact code for modul 1

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,10 @@
   <script src="/static/contacts/contacts.js"></script>
   <script src="/static/filter/filter.js"></script>
   <script src="/static/popups/popups.js"></script>
+  <script src="/static/contacts/contacts_phone.js"></script>
+  <script src="/static/contacts/contacts_form.js"></script>
+  <script src="/static/contacts/contacts_delete.js"></script>
+  <script src="/static/contacts/contacts_groups.js"></script>
   <script src="/static/footer/footer.js"></script>
 </body>
 </html>
